Refactor into class to make it more like re-usable chart pattern.

--- a/app/index.html
+++ b/app/index.html
@@ -12,17 +12,11 @@
     <p>Visualize a perceptron adjust weights as it is given training data.</p>
 
     <div class="visual">
-      <div class="visual-container">
-
-      </div>
+      <div class="visual-container"></div>
     </div>
 
     <button type="button" class="mode">Mode</button>
-
-    <div class="playground">
-
-      Playground
-    </div>
+    <button type="button" id="reset">Reset</button>
 
     <!-- build:js -->
     <!-- endbuild -->
