Fix updateTrainingLine method

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,9 @@
       <div class="visual-container"></div>
     </div>
 
-    <button type="button" class="mode">Mode</button>
+    <button type="button" id="mode">Mode</button>
     <button type="button" id="reset">Reset</button>
+    <button type="button" id="train">Train</button>
 
     <!-- build:js -->
     <!-- endbuild -->
