Update to use jquery in consuming application

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <button type="button" id="reset">Reset</button>
     <button type="button" id="train">Train</button>
 
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
     <!-- build:js -->
     <!-- endbuild -->
   </body>
