--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <button type="button" id="mode">Mode</button>
     <button type="button" id="reset">Reset</button>
     <button type="button" id="train">Train</button>
+    <button type="button" id="brush">Move Brush</button>
 
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <!-- build:js -->
